PORTALS-4073: prevent vertical scrollbar in mobile

--- a/packages/synapse-react-client/src/style/components/_cards.scss
+++ b/packages/synapse-react-client/src/style/components/_cards.scss
@@ -254,8 +254,8 @@
       flex: 0 0 25%;
       padding-top: var(--baseline-grid);
       @media (max-width: map.get(SRC.$breakpoints, 'medium')) {
+        flex: none;
         padding-top: 0;
-        margin-top: var(--baseline-grid);
       }
     }
   }
